Bugfix and aesthetic changes to project timeline.
 * Lightbox fix (again)
 * Timeline heights and widths changed, with no link underline and a slight
   border to separate updates. Much easier on the eyes.
 * Thumbnail aspect overflow by changing resize based on WIDTH to resize
   automatically determined fixed any thumbnail overlaps on tall images.

--- a/css/scrollable.css
+++ b/css/scrollable.css
@@ -76,7 +76,7 @@ div.scrollable {
 	position:relative;
 	overflow:hidden;
 	width: 790px;	 
-	height:150px;	
+	height:170px;	
 }
 
 /* 
@@ -100,7 +100,8 @@ a.prev, a.next {
 #thumbs div {
 	float:left;
 	width:131px;
-	height:150px;
+	border-right: 1px solid #EEE;
+	height:170px;
 	color:#000;
 	cursor:pointer;
     text-align: center;
@@ -109,11 +110,13 @@ a.prev, a.next {
 /* style when mouse is over the item */
 #thumbs div.hover {
     background-image: url('../images/thumb_bg.png');
+	background-repeat: no-repeat;
 }
 
 /* style when element is active (clicked) */
 #thumbs div.active {
     background-image: url('../images/thumb_selected_bg.png');
+	background-repeat: no-repeat;
 	cursor:default;
 }
 
@@ -124,15 +127,20 @@ a.prev, a.next {
 
 #thumbs p {
     margin-top: 4px;
-    height: 65px;
-    line-height: 65px;
-
+    height: 70px;
+    line-height: 70px;
 }
+
 #thumbs h3 {
     margin-left: auto;
     margin-right: auto;
-    width: 131px;
-    height: 45px;
+    width: 121px;
+    height: 65px;
 	font-size:12px;
 	color:#000;	
+	word-wrap: break-word;
+}
+
+#thumbs h3 a {
+	text-decoration: none;
 }
